--- a/Project.uproject
+++ b/Project.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{3D87A08E-4DED-A279-4996-5AA52A4BD04F}",
+	"EngineAssociation": "5.5",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
